--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/lab": "^5.0.0-alpha.173",
     "@mui/material": "^5.16.12",
+    "@mui/x-data-grid": "^7.23.5",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.2",
