--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "date-fns": "^3.6.0",
     "fontfaceobserver": "^2.3.0",
     "framer-motion": "^11.3.19",
+    "html2pdf.js": "^0.10.2",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
     "jwt-decode": "^4.0.0",
