--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
+    "react-export-table-to-excel": "^1.0.6",
     "react-hook-form": "^7.53.1",
     "react-router-dom": "^6.25.1",
     "react-toastify": "^10.0.5",
