--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "jspdf-autotable": "^3.8.4",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.453.0",
+    "papaparse": "^5.5.1",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
