--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.16.13",
     "@mui/styled-engine-sc": "^6.3.0",
     "@mui/x-data-grid": "^7.23.5",
+    "@mui/x-data-grid-pro": "^7.24.0",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.2",
