--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-dom": "^18.3.1",
     "react-export-table-to-excel": "^1.0.6",
     "react-hook-form": "^7.53.1",
+    "react-hotkeys-hook": "^5.2.1",
     "react-router-dom": "^6.25.1",
     "react-toastify": "^10.0.5",
     "styled-components": "^6.1.13",
