--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-hotkeys-hook": "^5.2.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.25.1",
+    "react-to-print": "^3.2.0",
     "react-toastify": "^10.0.5",
     "styled-components": "^6.1.13",
     "tailwind-merge": "^2.5.4",
