--- a/jsconfig.app.json
+++ b/jsconfig.app.json
@@ -1,5 +1,9 @@
 {
   "compilerOptions": {
+    "composite": true,
+    "module": "ESNext",
+    "moduleResolution": "Node",
+    "jsx": "react-jsx",
     "baseUrl": ".",
     "paths": {
       "@/*": [
@@ -7,8 +11,8 @@
       ]
     }
   },
-  "include": [
-    "src/**/*"
+  "files": [
+    "src/main.jsx"
   ],
   "exclude": [
     "node_modules",
